[tool.poetry]
name = "project-navi-image-processor"
version = "0.1.0"
description = "Image processing service for Project Navi"
authors = ["Project Navi Team"]
readme = "README.md"
packages = [{include = "image_processor", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.1.0"
opencv-python = "^4.8.0"
numpy = "^1.26.0"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-multipart = "^0.0.6"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.12.0"
ruff = "^0.1.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
