[tool.poetry]
name = "project-navi-scraper"
version = "0.1.0"
description = "Content scraper service for Project Navi"
authors = ["Project Navi Team"]
readme = "README.md"
packages = [{include = "scraper", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
httpx = "^0.25.0"
beautifulsoup4 = "^4.12.0"
lxml = "^5.0.0"
apscheduler = "^3.10.0"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.0"
python-dateutil = "^2.8.2"
loguru = "^0.7.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.12.0"
ruff = "^0.1.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
